--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,3 +18,8 @@ jobs:
       id: extract_branch
     - name: Update version
       run: node update_package.js ${{ steps.extract_branch.outputs.branch }}
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v1
+      with:
+        branch: ${{ steps.extract_branch.outputs.branch }}-more
+        # token: ${{ secrets.GITHUB_TOKEN }}    - name: Update version
