--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,4 +22,4 @@ jobs:
       uses: peter-evans/create-pull-request@v1
       with:
         branch: ${{ steps.extract_branch.outputs.branch }}-more
-        # token: ${{ secrets.GITHUB_TOKEN }}    - name: Update version
+        token: ${{ secrets.GITHUB_TOKEN }}
